--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -202,7 +202,7 @@ In this section,  we introduce the extended admixture pulse model as a generaliz
 
 We then present the details on the simulation settings we use to evaluate these models.
 
-We use these simulations to assess the performance of the simple pulse model under more complex admixture scenarios, test the effect of technical variables such as recombination rate variation or demographic scenarios and evaluate when the two models can be distinguished.
+We use these simulations to assess the performance of inference methods assuming the simple pulse model under more complex admixture scenarios, and test the impact of technical variables such as recombination rate variation or demographic scenarios and evaluate when the two models can be distinguished.
 
 Finally, we apply our methods to distinguish several admixture scenarios with different durations to ALD data from the 1000 Genomes Project \citep{the_1000_genomes_project_consortium_global_2015} with 3 high coverage Neandertals \citep{prufer_complete_2013,prufer_high-coverage_2017,mafessoni_high_coverage_2020}.
 
@@ -211,13 +211,13 @@ Finally, we apply our methods to distinguish several admixture scenarios with di
 
 In this section, we present formal definitions of the admixture models used.  We assume we have $n$ admixture segments. We denote the length of the $i$-th segment as $L_i$. Further, the random variable $T_i$ represents the time when fragment $L_i$ entered the population. We assume that the $L_i$ and $T_i$ are both realizations from more general distributions $L$ and $T$ that reflect the overall segment length and admixture time distributions, respectively. 
 
-Given $T_i$, we assume that $L_i$ is exponentially distributed with rate parameter given the admixture time $t_a$ and the recombination rate $r$.
+Given $T_i$, we assume that $L_i$ is exponentially distributed with rate parameter given by the admixture time $t_a$ and the recombination rate $r$.
 \begin{equation}
 \label{eq:generall_length_distribution}
-    P(L_i=l|T_i=t) \sim \text{Exp}[t_a r]
+    P(L_i=l|T_i=t) = t r\exp{-t r l} 
 \end{equation}
 
-If we measure the length of each segment $L_i$ in the recombination distance Morgan (M), $r=1$.
+If we measure the length of each segment $L_i$ in the recombination distance Morgan (M), $r=1$ and is omitted from this section for simplicity.
 
 We assume that  $T_i$ is drawn from a distribution $T$. In that case, we need to integrate over all possible values of $T_i$. 
 
@@ -232,16 +232,14 @@ Thus, the distribution of the admixture times $T_i$ can be thought of as the mix
 \subsubsection{The Simple Pulse Model}\label{The Simple Pulse Model}
 
 
-In the simple pulse model, we assume that all fragments enter the population at the same time $t_a$. Therefore all $T_i$ have the same value $t_a$, and $T$ thus is a constant distribution. We can realize this by using a Dirac delta function, which is zero everywhere except at $t_a$ and integrates to 1 over the entirety of the distribution:
+In the simple pulse model, we assume that all fragments enter the population at the same time $t_a$. Therefore all $T_i$ have the same value $t_a$, and $T$ thus is a constant distribution. We can formalize this by using a Dirac delta function:
 
 \begin{equation}
 \label{eq:RV_simple_pulse}
-  P(T_i)=\left\{
-  \begin{array}{@{}ll@{}}
-    1, & \text{if}\ T_i=t_a \\
-    0, & \text{otherwise}
-  \end{array}\right.
+  P(T_i)=\delta_{t_a}(T_i),
 \end{equation} 
+which integrates to one if $T_i = t_a$.
+
 
 Therefore,
 
@@ -258,6 +256,13 @@ The expected segment length under a simple pulse model is given by,
 \label{eq:Expected_l_simple_pulse}
     \mathbb{E}[L]=\frac{1}{t_a}
 \end{equation}
+
+and variance
+\begin{equation}
+\label{eq:Expected_l_simple_pulse}
+    \text{Var}[L]=\frac{1}{t_a^2}
+\end{equation}
+
 
 Note that this definition of the segment length distribution is independent from the migration rate $m$ at $t_a$. Hence, the model does not consider the (higher) probability of admixture segments recombining with each other when the migration rate is high. This can be done following Gravel et al. 2012 \citep{gravel_population_2012}. For Neandertal admixture where $m$, the admixture fraction, is typically low, the exponential assumption is satisfied \citep{liang_lengths_2014}.
 
@@ -280,7 +285,7 @@ Var[T]&=\frac{t_{m}^2}{k} = \bigg(\frac{t_d}{4} \bigg)^2  \\
 \end{split}
 \end{equation}
 
-Here, we define the admixture duration $t_d=4\sqrt{\frac{t_m^2}{k}}$, which is a convenient measure for the duration of gene flow. The distribution of segment length is then given by:
+Here, we define the admixture duration $t_d=4t_m k^{-\frac{1}{2}} $, which is a convenient measure for the duration of gene flow. The distribution of segment length is then given by:
 
 
 \begin{equation}
@@ -288,12 +293,8 @@ Here, we define the admixture duration $t_d=4\sqrt{\frac{t_m^2}{k}}$, which is a
     P(L=l) = t_{m}^{-k} \ \Bigg( \frac{k}{l+\frac{k}{t_{m}}}\Bigg)^{k+1}
 \end{equation}
 
-The distribution  in equation \ref{eq:Likelihood_function_extended_pulse} is known as a \emph{Lomax} or \emph{Pareto-II} distribution, which is a heavier-tailed relative of the Exponential distribution. It is typically parameterized using a shape parameter $\alpha=k$ and scale parameter $\lambda = \frac{t_m}{k}$. 
+The distribution  in equation \ref{eq:Likelihood_function_extended_pulse} is known as a \emph{Lomax} or \emph{Pareto-II} distribution, which is a heavier-tailed relative of the Exponential distribution. It is typically parameterized using a shape parameter $\alpha=k$ and scale parameter $\lambda = \frac{k}{t_m}$. 
 
-\begin{equation}
-\label{eq:Classic_Lomax}
-    p(x) = \frac{\alpha}{\lambda} \Bigg( \frac{k}{1+\frac{x}{\lambda}}\Bigg)^{-(\alpha+1)}
-\end{equation}
 
 Therefore, the expected segment length distribution under the extended pulse model is the same as under the simple pulse model (\ref{eq:Expected_l_simple_pulse}):
 
@@ -302,75 +303,65 @@ Therefore, the expected segment length distribution under the extended pulse mod
 \mathbb{E}[L] = \frac{1}{t_{m}}
 \end{equation}
 
-However, the variance of segment lengths is different:
+And the variance for $k>2$ is 
 
 \begin{equation}
 \label{eq:Var_l_extended_pulse}
-Var[L] = \frac{(\frac{t_m}{k})^2k}{(k-1)(k-2)}
+Var[L] = \frac{1}{t_m^2}\frac{k^3}{(k-1)^2(k-2)}\text{.}
 \end{equation}
 
 
-As $k$ approaches infinity, we recover the (nested) simple pulse model.
+The second fraction is strictly larger than one, which matches our intuition that ongoing gene flow should result in a larger variance in admixture fragment length. As $k$ approaches infinity, this term approaches one and we recover the moments of the exponential distribution, since $k$ is inversely proportional to the admixture duration.
 
 
 
 \subsubsection{Admixture time estimates}\label{admixture time estimates}
-For inference, the admixture fragment lengths are unknown. Here, rather than estimating fragments, we follow \cite{moorjani_history_2011} and use the decay of ALD  as a statistic. Instead of the density $P(L_i)$, we need the probability that two markers a given distance $d$ apart are separated by at least one recombination event. This probability is given by the the tail function $P(L_i > d)$.
+For inference, the admixture segment lengths are unknown. Here, rather than estimating segments, we follow \cite{moorjani_history_2011} and use the decay of ALD  as a statistic. Instead of the density $P(L_i)$, we need the probability that two markers a given distance $d$ apart are separated by at least one recombination event. This probability is given by the the tail function $P(L_i > d)$.
 
 The tail functions under both the simple and extended pulse models are 
 \begin{equation}
-\label{eq:simple_pulse_ccdf}
+\label{eq:simple_pulse_tail}
 P(L_i > d) = e^{-t_m \:d}
 \end{equation}
 
 \begin{equation}
-\label{eq:extended_pulse_ccdf}
-P(L_i > d) = \left( \frac{1}{1 + \frac{k}{tm} \:d}\right) ^k
+\label{eq:extended_pulse_tail}
+P(L_i > d) = \left( \frac{1}{1 + \frac{t_m}{k} \:d}\right) ^k
 \end{equation}
 
-For inference, following \cite{moorjani_genetic_2016}, we add an intercept $A$ and a constant modelling background LD $c$. to the tail functions. The genetic distance $d$ is measured in centMogran (cM).
-
-We are using the complement cumulative distribution of the likelihood functions given in \ref{eq:Likelihood_function_simple_pulse} and \ref{eq:Likelihood_function_extended_pulse_final} describing $P(D \geq d_0)$, whereas $d_0$ gives the minimal distance cutoff (Eq. \ref{eq:simple_pulse_ccdf} and \ref{eq:extended_pulse_ccdf}). Here \emph{A} is the
-intercept, $t_m$ the mean time since the admixture event in generations,
-\emph{d} the genetic distance in cM and \emph{c} is a constant modeling
-background LD. 
+For fitting the data, following \citep{moorjani_genetic_2016}, we add an intercept $A$ and a constant modelling background LD $c$, to the tail functions. The genetic distance $d$ is measured in centiMogran (cM).
 
 
 \begin{equation}
-\label{eq:simple_pulse_ccdf}
+\label{eq:simple_pulse_tail_inf}
 ALD \sim\ A\,e^{-t_m \:d}+c
 \end{equation}
 
 \begin{equation}
-\label{eq:extended_pulse_ccdf}
-ALD \sim\ A\,\left( \frac{1}{1 + \frac{k}{tm} \:d}\right) ^k+c
+\label{eq:extended_pulse_tail_inf}
+ALD \sim\ A\,\left( \frac{1}{1 + \frac{t_m}{k} \:d}\right) ^k+c
 \end{equation}
 
-The simple pulse model is fitted following Moorjani et al 2016
-\citep{moorjani_genetic_2016} (Eq. \ref{eq:simple_pulse_ccdf}). The extended pulse model is
-modeled using the Lomax ccdf (Eq. \ref{eq:extended_pulse_ccdf}).  We fitted the distribution to the data using a non-linear least-square optimization algorithm
-implemented in the R \citep{R_Core_Team_2019}.
+We fitted the distribution to the data with  a non-linear least-square optimization algorithm
+using the \texttt{nls} function implemented in the R \texttt{stats v.3.6.2} package \citep{R_Core_Team_2019}.
 
 
 \subsection{Simulations}\label{simulations}
 
-We used the msprime coalescent simulator
-\citep{kelleher_efficient_2016} for simulations with sample sizes
-chosen to reflect presently available data. For ALD simulations we simulate 176 diploid
+We test our approach using coalescence simulations using  \texttt{msprime} 
+\citep{kelleher_efficient_2016}. We focus on scenarios mimicing Neandertal admixutre, and chose sample sizes to reflect those available from the 1000 Genomes data \citep{the_1000_genomes_project_consortium_global_2015}. For ALD simulations we simulate 176 diploid
 African individuals and 170 diploid non-Africans, corresponding to the
-number of Yoruba (YRI) and Central Europeans from Utah (CEU)
-sequences in the 1000 Genomes project data \citep{the_1000_genomes_project_consortium_global_2015}. Since three
-high coverage Neandertal sequences are available \citep{prufer_complete_2013,prufer_high-coverage_2017,mafessoni_high_coverage_2020} we choose to
-simulate three diploid genomes. For each individual we simulated 20
-chromosomes with a length of 150 Mb each. The mutation rate was set for
+number of Yoruba (YRI) and Central Europeans from Utah (CEU). 
+Since three high coverage Neandertal sequences are available \citep{prufer_complete_2013,prufer_high-coverage_2017,mafessoni_high_coverage_2020} we  simulate three diploid Neandertal genomes. For each individual we simulate 20
+chromosomes with a length of 150 Mb each. The mutation rate is set for
 all simulations to \(2*10^{-8}\) per base per generation. The
-recombination rate was set to \(1*10^{-8}\) per base pair per generation
+recombination rate is set to \(1*10^{-8}\) per base pair per generation
 unless specified otherwise. The demographic parameters are based on
 previous studies dating Neandertal admixture
 \citep{sankararaman_date_2012,fu_genome_2014,moorjani_genetic_2016}. In
 the ``simple'' demographic model (S \ref{fig:figS1} A), the effective
-population size is assumed constant at \textit{Ne}=10000 for all populations, the
-split time between modern humans and Neandertals is 10000 generations
+population size is assumed constant at $N_e=10000$ for all populations, the
+split time between modern humans and Neandertals is 10,000 generations
 ago and the split between Africans and non-Africans is 2550
 generations ago. The migration rate from Neandertals into non-Africans
 was set to zero before the split from Africans, to ensure no Neandertal
@@ -378,94 +369,71 @@ ancestry in Africans. Each simulation was repeated 100 times.
 
 
 \subsubsection{Simulating admixture}\label{Simulating the expanded pulse}
+We specify simulations under the extended pulse model using the mean admixture time $t_m$ and the duration $t_d$. We recover the simple pulse model by setting $t_d=1$. To obtain the migration rates in each generation, we use a discretized version of the migration density (eq \ref{eq:RV_extended_pulse}), which we then scale to the total amount of Neandertal ancestry in to modern humans (here 0.03). 
 
-For our coalescent simulations we used the extended pulse model with $t_m$ as the mean admixture time and $t_d$ as its duration. If $t_d$ is set to 1 (corresponding to a value of k=2250000 since, $k=\frac{t_m^2}{(t_d/4)^2}$) gives the simple pulse model. To obtain the migration rate over time $t$ we simply scaled the Gamma density by the total migration rate from Neandertals to modern humans (here 0.03). 
-
-\subsubsection{Recombination map}\label{recombination map}
-
-Uncertainties in the recombination map were previously shown to bias
-admixture time estimates \citep{sankararaman_date_2012,sankararaman_combined_2016,fu_genome_2014}. To investigate the effect of more realistic
-recombination rate variation, we simulated samples using a recombination map. For ALD simulations we
-either used the African-American-Map \citep{hinch_landscape_2011} or
+\subsubsection{Recombination maps}\label{recombination map}
+Uncertainties in the recombination map were previously shown to influence admixture time estimates \citep{sankararaman_date_2012,sankararaman_combined_2016,fu_genome_2014}. To investigate the effect of more realistic
+recombination rate variation, we perform simulations using empirical recombination maps. For ALD simulations we
+either use the African-American-Map \citep{hinch_landscape_2011} or
 the HapMap phase 3 \citep{HapMapConsortium_second_2007} for simulations
-under a variable recombination rate. For simplicity, we used the same
+under a variable recombination rate. For simplicity, we use the same
 recombination map (150 Mb of chromosome 1, excluding the first 10 Mb)
-for all simulated chromosomes. The mean recombination rate was
+for all simulated chromosomes. The mean recombination rate is
 calculated from the 150 Mb map (\(1.017 \, \frac{cM}{Mb}\) AAMap and
-\(0.992 \, \frac{cM}{Mb}\) HapMap). To examine the effect of uncertainties in the
-genetic map we either: used the mean recombination rate from the
-respective map to calculate the genetic distance from the physical
-distance for each SNP (assuming recombination to be constant), used the other map to assign distances
-(e.g.~AAMap used for the msprime simulation and HapMap used to assign
-genetic distances, emulating uncertainties in the recombination map) or used the same map for simulation and assigning
-genetic distances (population specific map). 
+\(0.992 \, \frac{cM}{Mb}\) HapMap).
+
+
 
 \subsubsection{Complex demography}\label{inferred demography}
-
 Demography such as population size changes are known to influence LD
-patterns \citep{gravel_population_2012,liang_lengths_2014}. To test the impact of
-demographic history on admixture time estimates, we contsrast our standart model with
-realistic and complex demographic histories. This includes substructure in the ancestral human population and additional gene flow between Africans and non-Africans after the Neandertal admixture (S \ref{fig:figS1} B). The 
-effective population
-sizes are based on estimates from Neandertal and present-day human
-genomes. MSMC estimates from YRI as representatives for Africans and CEU
-for non-Africans from Schiffles \& Durbin 2014
-\citep{schiffels_inferring_2014} were used together with PSMC
-\citep{li_inference_2011} inferred demographic model for Neandertals
-based on the Vindija33.19 high-coverage genome
-\citep{mafessoni_high_coverage_2020}. In order to use the effective
-population size estimates at a given time point for modern humans from
-Schiffels \& Durbin 2014 for our simulations, we
-first transformed the time points given in years back to generations by
-using 30 years for one generation, as assumed in Schiffels \& Durbin.
-Second, since the original estimates are based on a different mutation
-rates (\(1.25*10^{-8} \frac{bp}{gen}\)), we corrected all estimates for
-the mutation rate used in the simulations
-(\(2*10^{-8} \frac{bp}{gen}\)). The split times between Neandertals and
-modern humans was kept the
-same as in the simple demographic simulations (10000 generations ago) (S. \ref{fig:figS1} A). In the complex model, we simulated an earlier initial split between populations in Africa 3550 generations ago. With substructure starting from 3200 till the final split at 2550 generations ago with a per generation migration rate between the two subpopulations of 0.001. The population size of the ancestor of Neandertals and
-humans before the split was set to 18296 (taken from the MSMC results). To simulate branch shortening
-caused by the extinction of Neandertals, Neandertals were sampled 750
-generations before the Africans and non-Africans. We simulated an additional admixture event between African and non-African populations with a total migration rate of 0.01 starting from 200 till 50 generations ago.
+patterns, and may thus influence admixture time estimates \citep{gravel_population_2012,liang_lengths_2014}. To test the impact of
+demographic history on admixture time estimates, we contrast our standard model with a more 
+realistic and complex demographic history. This model includes substructure in the ancestral human population, and additional gene flow between Africans and non-Africans after the Neandertal admixture (S \ref{fig:figS1} B). The effective population
+sizes change over time, and are based on estimates from Neandertal and present-day human genomes. In particular, we use the MSMC estimates for YRI and CEU to model Africans and Europeans, respectively 
+\citep{schiffels_inferring_2014}. The Neandertal population size history is modelled after  PSMC estimates \citep{li_inference_2011} from the high-coverage Vindija 33.19 genome
+\citep{mafessoni_high_coverage_2020}. 
+
+The split times between Neandertals and
+modern humans is kept the
+same as in the simple demographic simulations (10,000 generations ago) (S. \ref{fig:figS1} A), and add substructure within Africa starting from 3200 till 2550 generations ago with a per generation migration rate between the two subpopulations of 0.001. The population size of the common ancestor of Neandertals and humans  is set to 18,296 (based on MSMC results). To mimic the age of the samples, Neandertals are sampled 750 generations before the Africans and non-Africans. Finally, we add recent gene flow between African and non-African populations with a total migration rate of 0.01 starting from 200 till 50 generations ago \cite{petr_limits_2019}.
 
 
 
 \subsubsection{Ascertainment scheme}\label{asceteinment scheme}
-
 For the ALD method, SNPs need to be ascertained to enrich for
 Neandertal informative sites in the test population to remove noise and
 amplify the ALD signal \citep{sankararaman_date_2012}. 
-We evaluated the impact of the ascertainment scheme by contrasting two distinct schemes \citep{sankararaman_date_2012,fu_genome_2014}. The lower-enrichment
-ascertainment scheme (LES) filters for SNPs fixed for the ancestral state in
-Africans and polymorphic in Neandertals. The higher-enrichment
-ascertainment scheme (HES) restricts the analysis on SNPs fixed for the
-ancestral state in Africans, polymorphic in Neandertals and polymorphic
-in non-Africans.
+We evaluate the impact of the ascertainment scheme by contrasting two distinct schemes \citep{sankararaman_date_2012,fu_genome_2014}. The lower-enrichment ascertainment scheme (LES) only considers  sites that are fixed for the ancestral state in
+Africans and polymorphic or fixed derived in Neandertals. The higher-enrichment
+ascertainment scheme (HES) is more restrictive in that it further excludes all sites that are not polymorphic in non-Africans.
 
 \subsubsection{ALD calculation}\label{ALD calculation}
 
 The pairwise weighted LD between the ascertained SNPs a certain genetic
-distance \(d\) apart was calculated using ALDER
+distance \(d\) apart is calculated using ALDER
 \citep{loh_inferring_2013}. A minimal genetic distance \(d_0\) between
-SNPs was set either to 0.02 cM and 0.05 cM. This minimal distance cutoff
-removes extremely short-range LD, which might be due to incomplete lineage sorting (ILS). 
+SNPs is set either to 0.02 cM and 0.05 cM. This minimal distance cutoff
+removes extremely short-range LD, which might also be due to incomplete lineage sorting (ILS). 
 
+\subsection{Evaluation of the simulations}
+
+In this section, we describe how we evaluate the accuracy of our inference. More specific, we want to know how much the inferred time estimate deviates from the simulated one under a given set of simulation and inference parameters. We want to compare the influence of the parameters to the influence of the admixture time model. We use a linear model approach to decompose the relative importance of each parameter.
 
 \subsection{Modeling parameter effect sizes}\label{modeling prameter effect sizes}
+We consider a set of five parameters:
+\begin{itemize} 
+    \item ascertainment scheme: $A_i$ = LES/HES
+    \item minimal genetic distance: $M_i$ = $0.02 cM/ 0.05 cM$
+    \item demography: $D_i$ = simple/complex
+    \item recombination rate: $R_i$ = constant/variable
+    \item admixture model: $G_i$ = pulse/continuous
+\end{itemize}
 
-To model and compare parameter effect sizes we simulated 100
-replicates for each combination of
-parameters: ascertainment scheme ($A_i$ = LES/HES), minimal genetic distance
-($M_i$ = \(d_{0}=0.02\,cM\)/\(d_{0}=0.05\,cM\)), demography ($D_i$ = simple/complex),
-recombination rate ($R_i$ = constant/variable), admixture model
-($G_i$ = pulse/continuous). Results of simulations where the nls-optimization to
-fit the ALD decay curve did not converge were removed (10 out of 3200).
-We used a Generalized Linear Model (GLM)  to estimate the effect
-size of the different parameters (Eq.
-\ref{eq:8}). The difference between the estimated
-admixture time and the true admixture time, the error in the estimate,
-was standardized using the true time as the mean. The standardized error in this model is the response to the parameters as model
-predictors. We choose the Normal distribution as the likelihood function being the maximum entropy distribution in our case. The mean of the Normal distribution is then described by a fixed effect size model of the predictors (factors) coded as indicator variables. We obtained the posterior probability using a Hamiltonian Monte Carlo MCMC algorithm, as implemented in STAN \citep{carpenter_stan_2017} using an R interface \citep{stan_development_team_rstan_2018,mcelreath_statistical_2020}. The Markov chains converged to the target distribution (Rhat = 1) and efficiently sampled from the posterior (S Table \ref{tab:tableS1}).  
+For each of the 32 possible set of parameters, we simulate 100 replicates each and fit ALD decay curves. We excluded a very small number of simulations for which the curve could not be estimated (10 out of 3200).
+
+
+To estimate the effect size of the different parameters (eq.
+\ref{eq:8}) we use a Bayesian Generalized Linear Model (GLM):
 
 \begin{equation}\label{eq:8}
 \begin{split}
@@ -477,48 +445,52 @@ E_i &\sim Normal(\mu_i,\sigma) \\
 \end{split}
 \end{equation}
 
-\subsection{Estimating admixture time from real data}\label{Estimating admixture time from real data}
+The response variable $E_i$ for this model are the residuals, the difference between the estimated and simulated admixture time for each simulation:
+$$E_i = \frac{t_{est} - t_{sim}}{\sigma_{t_{est}}}$$, where $\sigma$ is the standard deviation of $t_{est}$ , and the model variables $A, M, D, R$ and $G$ are binary predictors.
+We assume a Normal likelihood because it is the maximum entropy distribution in our case. We obtained the posterior probability using a Hamiltonian Monte Carlo MCMC algorithm, as implemented in STAN \citep{carpenter_stan_2017} using an R interface \citep{stan_development_team_rstan_2018,mcelreath_statistical_2020}. The Markov chains converged to the target distribution (Rhat = 1) and efficiently sampled from the posterior (S Table \ref{tab:tableS1}).  
 
-We applied the extended pulse model on real data to see if we can reject any admixture durations (including a one generation pulse), by comparing the model fit to the data for different duration parameters.
-We used the 1000 Genomes phase 3 data together with the Altai, Vindija and Chagyrskaya high coverage Neandertals.  We filtered for all unrelated individuals from the YRI as representatives of unadmixed Africans and all CEU as admixed Europeans. We only considered biallelic sites. The sites were polarized relative to the Chimpanzee base (panTro4). We used the CEU specific fine-scale recombination map \citep{spence_inference_2019} to convert the physical distance between sites into genetic distance. 
+\subsubsection{Recombination rate}
+ 
+Since the inference of admixture time depends on measuring the recombination clock, we rely on accurate recombination rate estimates from the admixed population to assign genetic distances between SNPs. Since there are not always high-precision population specific recombination maps available, we examine three ways of assigning the genetic distance with various degrees of uncertainty. When simulating data under a recombination map, we either: use the mean recombination rate from the
+respective map to calculate the genetic distance from the physical
+distance for each SNP (assuming recombination to be constant), use the another genetic map to assign distances
+(e.g.~AAMap  for the \texttt{msprime} simulation and HapMap  to assigngenetic distances, emulating uncertainties in the recombination map) or use the same map for simulation and assigning
+genetic distances (population specific map). 
+
+\subsection{Estimating admixture time from real data}\label{Estimating admixture time from real data}
+To evaluate when we can reject any admixture durations (including a one generation pulse), we applied the extended pulse model on real data from the 1000 Genomes project \cite{the_1000_genomes_project_consortium_global_2015}.
+
+We used the 1000 Genomes phase 3 data together with the Altai, Vindija and Chagyrskaya high coverage Neandertals, including the 107 unrelated individuals from the YRI as representatives of unadmixed Africans and all CEU as admixed Europeans. We only considered biallelic sites, and determine the ancestral allele using  the Chimpanzee reference genome (panTro4). We used the CEU specific fine-scale recombination map \citep{spence_inference_2019} to convert the physical distance between sites into genetic distance. 
+
 
 \section{Results}\label{results}
 
-\subsection{Introduction to result}\label{introduction to result}
+\subsection{Introduction to results}\label{introduction to result}
 
-We used coalescent simulations of Neandertal admixture into non-African humans to investigate multi-generation continuous admixture, using a Gamma distribution describing the per generation migration rate (the extended pulse model). Focusing on the ALD approach, we used the ALDER program to infer the decay of LD between ascertained sites informative for Neandertal introgression in non-Africans. The ascertained ALD was fitted with an exponential distribution assuming a one-generation admixture pulse (the simple pulse model).  We simulated this scenario using different conditions of recombination and demography as well as deploying different ascertainment schemes and LD cutoffs. A Generalized Linear Model (GLM) was used to compare all these factors with the effect of an extended pulse on the one-generation assumption. The Lomax distribution describing the ALD under an extended admixture pulse was deployed for fitting the data to obtain the duration of admixture. We test this new fitting with the most inferential factors from the previous analysis on simulated and real data using the ALD.
+We use coalescent simulations of Neandertal admixture into non-African humans to investigate multi-generation continuous admixture, using a Gamma distribution describing the per generation migration rate (the extended pulse model). Focusing on the ALD approach, we use the ALDER program to infer the decay of LD between ascertained sites informative for Neandertal introgression in non-Africans. The ascertained ALD is fitted with an exponential distribution assuming a one-generation admixture pulse (the simple pulse model).  We simulate this scenario using different conditions of recombination and demography as well as deploying different ascertainment schemes and LD cutoffs. A Generalized Linear Model (GLM) is used to compare all these factors with the effect of an extended pulse on the one-generation assumption. The Lomax distribution describing the ALD under an extended admixture pulse is deployed for fitting the data to obtain the duration of admixture. We test this new fitting with the most inferential factors from the previous analysis on simulated and real data using the ALD.
 
 
 \subsection{The effect of continuous admixture on the admixture time estimates}\label{the effect of continuous admixture on the admixture time estimates}
-
+We first evaluate a scenario where simulations were performed under an extended pulse model, but inference is done assuming a simple pulse. This scenario mimics real-world applications where contact likely persists over multiple generations. 
 
 To assess the effect of estimating admixture time assuming a one-generation pulse when the real gene flow is actually continuous over multiple generations,
-we compared the mean average deviation from the true mean time of admixture for simulations under a simple pulse with the one under an extended pulse with the same mean time.
+
+For this purpose, we compare inference on simulations under the extended pulse model with simulations under the simple pulse model. 
 The total amount of gene flow \(m\) from Neandertals into non-Africans
-in the two models is equal. 
-The shape and scale parameter of the Gamma distribution modeling the migration rate are chosen such
-that the resulting weighted LD decay curves as functions of genetic
-distance share the same mean for both admixture models. We used the LES ascertainment scheme and a minimal distance between SNPs of 0.05 cM. 
-
-First, we evaluate the effect of the admixture time on the accuracy of both a single pulse and an extended pulse model. The mean admixture times ranges
-from 250 generations ago to 2000 generations ago.  The duration
-of interbreeding under the extended pulse model is 50\% of the mean time (if the
-mean time is 250 generations ago gene flow ranges from 325 to 175
-generations ago). Assuming only a one generation pulse to estimate the
-mean time, revealed only minor deviations between the two scenarios and
-the true admixture time of 3\% to 6\% for the simple pulse and 0\% to 5\% for
-the extended pulse (Figure \ref{fig:fig2} A).
+in the two models is equal, and we match the two models such that the mean admixture tract lengths are equal as well, with the only difference being the duration of gene flow $t_d$. All comparisons are based on the LES ascertainment scheme and $d_0 =  0.05 cM$. 
 
 
 
-To
-further investigate the effect of simple and extended pulse gene flow on the
-admixture time estimates, we compared different durations of 
-admixture with a fixed mean time of admixture of 1500
-generations ago, displayed in Figure \ref{fig:fig2} B. Estimates between
-simple and extended admixture pulse start to deviate for 800 generations of
-continuous admixture, with increasingly lower estimates for simulations
-under continuous admixture compared to simulations under a one-generation pulse scenario per increase of admixture duration.
+\subsubsection{Results for model comparions}
+We first present the result of inference assuming a simple pulse model on simulations under the extended pulse model (Figure \ref{fig:fig2}). 
+
+In Figure \ref{fig:fig2}A, we plot results for both the simple and extended pulse model, for $t_m$ between 250 and 2000 generations, and $t_d = \frac{t_m}{2}$  (i.e. if $t_d= 500$ generations, then $t_d = 250$ and most gene flow occurrs between  375 and 625
+generations ago). Even for these long gene flows, the mean gene flow time is generally well-estimated, with a deviation of 3\% to 6\% for the simple pulse and 0\% to 5\% for
+the extended pulse models, respectively (Figure \ref{fig:fig2} A).
+
+To further investigate the effect of the duration of gene flow on mean
+admixture time estimates, we compare scenarios where $t_m$ is fixed at 1500, but where $t_d$ varies between one (simple pulse model) and 1500 generations (Figure \ref{fig:fig2}B). Here, we find that the simple pulse model leads to a slight overestimate of $t_m$, and that longer pulses result in more recent admixture time estimates. However, even  for very-long gene flow of $t_d=1,500$ the relative deviation is less than 10\%. Thus, we find that if we are interested in $t_m$, this parameter is generally well-estimated even under scenarios of very long gene flow.
+
 
 This bias is likely caused
 by the differences in LD between sites entered in the tails of the gamma
@@ -527,12 +499,7 @@ simulated by the right tail of the gamma distribution, is not detected
 anymore, while LD between sites from late admixture is still present,
 biasing the estimate towards younger dates. 
 
-However, deviations in
-estimates between the two scenarios of \textasciitilde{}120 generations
-in the most extreme case are moderate compared to the mean admixture
-time of 1500 generations.
 
-In summary, the differences in mean time estimates between the simple and extended pulse admixture assuming a one-generation pulse to estimate the time are moderate, even for very long continuous admixture scenarios. This makes point estimates for mean admixture time compatible with long continuous admixture.
 
 
 \begin{figure}
@@ -546,11 +513,11 @@ Comparison of mean admixture time estimates for simulations with a mean
 time of admixture of 1500 generations ago, at a varying length of gene
 flow. Boxplot created from 100 simulation replicates, respectively.}
 \end{figure}
-\subsection{Comparing effect sizes}\label{comparing effect sizes}
 
-Having shown that the duration of continuous admixture under ideal
-circumstances only marginally influences admixture time
-estimates, we want to compare its effect in more realistic simulation scenarios. Two common assumptions, namely knowing the recombination pattern and knowing the demographic history, were implicitly used in the previous simulations.
+
+\subsection{Comparing effect sizes for technical covariates}\label{comparing effect sizes}
+
+Two common assumptions, namely knowing the recombination pattern and knowing the demographic history, were implicitly used in the previous simulations.
 Previous studies reported that violations of these assumptions can have an effect on the admixture time estimates.
 Hence, we used the African-American genetic map and a more complex demography with substructure in the ancestral human population and additional gene flow between Africans and non-Africans after the Neadertal admixture ended (S. \ref{fig:figS1} B), for simulations under more realistic parameters. The genetic distance was assigned using the average recombination rate of the African-American genetic map (assuming a constant recombination rate).
 Furthermore, we altered the used scheme for ascertainment of SNPs for admixture informative sites. We compared the LES where only
@@ -559,32 +526,22 @@ populations are diverged from each other, to an even stricter scheme. The Higher
 to the LES non-Africans to be polymorphic at a SNP. Additionally, we altered the minimal distance between pairs of SNPs for which the LD is calculated from 0.05 cM to 0.02 cM.
 
 
+As the effect of ongoing gene flow is relatively minor, we next evaluate its relative importance for inference compared to other common assumptions made in the inference of admixture times. 
 
-We simulated every combination of these parameter sets resulting in 32
-different sets with 100 replications each (S. \ref{fig:figS2}).
-A GLM was applied to estimate effect sizes of the four predictors being
-ascertainment scheme, minimal distance, demography and recombination on
-the bias of admixture estimates (Supplement Table \ref{tab:tableS1}).
-Figure \ref{fig:fig3} shows the comparison of the standardized
-difference between true and estimated time between the previously used
-model (ascertainment = LES, \(d_{0} = 0.05 cM\), demography = simple and
-recombination = constant) further referred to as the standard model and
-a model with one of the four parameter changed, respectively. The
-previously observed overestimation of the standard model was estimated
-to be 0.12 (0.08 - 0.16 95 \% CI) standard deviation from the true
+Therefore, we contrast the effect of extended gene flow on admixture time inference with  the effects of a complex demographic history and complex recombination map, as well as the impact of the ascertainment scheme and $d_0$ in the ALD estimation, using a simple and complex setting for each of these parameters. 
+
+In Figure 3, we present the effect sizes of these four predictors on the admixture time inference. These effect sizes are estimated using a GLM (S. \ref{fig:figS2}) on simulations under all possible parameter combinations  (Supplement Table \ref{tab:tableS1}).
+
+As a baseline, for comparison, we define a standard model as one using the LES ascertaiment, \(d_{0} = 0.05 cM\), simple demography and constant recombination map). 
+
+As shown in the previous section, under the standard model admixture times are well-estimated, with a mean standardized difference of  0.12 (0.08 - 0.16 95 \% CI) from the true
 admixture time.
 
-Every parameter change, except using \(d_{0} = 0.02 cM\), results in lower estimates compared to the
-standard model, with the biggest difference between a constant and a
-varying recombination (-1.76 - -1.7 95 \% CI). The
-underestimation caused by the extended admixture pulse (-0.34 -
+We find that the  inclusion of a variable recombination map lead to a large underestimate of -1.5 (-1.76 - -1.7 95 \% CI). In contrast, all other covariates had relatively moderate effect sizes  (-0.34 -
 -0.28 95 \% CI) is in the range of biases arising from the ascertainment scheme (-0.35 -
 -0.29 95 \% CI) and only slightly more then caused by a more complex demography (-0.25 -
--0.19 95 \% CI). Most accurate estimates are achieved using the LES
-ascertainment scheme in combination with a minimal distance of 0.05 cM.
-Additionally, the bias introduced by the demography seems to depend on
-the used ascertainment scheme, since only under the HES a difference
-between the simple and complex demography is evident (S.
+-0.19 95 \% CI). 
+ (S.
 \ref{fig:figS2}).
 
 Overall the bias introduced by the ascertainment, minimal distance
